add *.mmdb file extension for sql lite, and add it to the "File/Associate" command.  Also allow .xml and .bxml on the command line.

--- a/Source/WPF/MyMoney/Properties/Resources.resx
+++ b/Source/WPF/MyMoney/Properties/Resources.resx
@@ -149,7 +149,7 @@
     <value>Money SQL CE Files (*.MyMoney.sdf)|*.MyMoney.sdf</value>
   </data>
   <data name="MoneySQLLiteFileFilter" xml:space="preserve">
-    <value>Money SQL Lite Files (*.MyMoney.db)|*.MyMoney.db</value>
+    <value>Money SQL Lite Files (*.mmdb)|*.mmdb|Old Money SQL Lite Files (*.MyMoney.db)|*.MyMoney.db</value>
   </data>
   <data name="OfxFileFilter" xml:space="preserve">
     <value>OFX files (*.ofx)|*.ofx</value>
