Fix some bugs.  Include  downloading stock quotes and history even for stocks that are not currently owned.

--- a/Source/WPF/MyMoney/Properties/Resources.resx
+++ b/Source/WPF/MyMoney/Properties/Resources.resx
@@ -289,4 +289,7 @@
   <data name="ConfigureStockQuoteService" xml:space="preserve">
     <value>Please configure your Stock Quote Acount from the Online menu</value>
   </data>
+  <data name="FoundUnknownStockQuotes" xml:space="preserve">
+    <value>Found some unknown stock symbols.  If this is for a company that is no longer trading, you can stop this error from happening by clearing the Symbol field on View/Securities.</value>
+  </data>
 </root>
