Beginings of support for new stock quote service: https://polygon.io/

--- a/Source/WPF/MyMoney/Properties/Resources.resx
+++ b/Source/WPF/MyMoney/Properties/Resources.resx
@@ -298,4 +298,7 @@
   <data name="FoundUnknownStockQuotes" xml:space="preserve">
     <value>Found some unknown stock symbols.  If this is for a company that is no longer trading, you can stop this error from happening by clearing the Symbol field on View/Securities.</value>
   </data>
+  <data name="DifferentSymbolReturned" xml:space="preserve">
+    <value>Stock quote request for symbol {0} returned a different symbol {1}</value>
+  </data>
 </root>
