- Fix #155: unhandled exception looking at payee - Fix #154: Clicking on a payee with no transactions shows invalid data - Fix #153: unhandled exception due to invalid char in account name Publish 2.1.0.49

--- a/Source/WPF/MyMoney/Properties/Resources.resx
+++ b/Source/WPF/MyMoney/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AccountNameValidChars" xml:space="preserve">
-    <value>Account name cannot contain the characters '{', '}' or ':'</value>
+    <value>Account name cannot contain the characters '{', '}', ':', '*', '"', '/', '\\', '&lt;', '&gt;', '|', or '?'</value>
   </data>
   <data name="AccountTypeMismatch" xml:space="preserve">
     <value>Account '{0}' should be of type {1} in order to import these transactions.</value>
